# dioxus-todo-app

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  justfile  package-lock.json  package.json
.devcontainer/: compose.yml  devcontainer.json
.sqlx/: query-014cbdf7b9ffd56e4ac9d5953aaf538dad2bb06a5586790be6c6f8c44f6c730f.json  query-0cfd50028b696a6d976afbd25def9da70bf0e7c606e58a5e0fd372a8f82416cc.json  query-1f5245d994e635300e6c716bcced58e70a14b6a90929e0709bef1e3e4d8188a9.json  query-26fd6711de7b8ed47ec0c5ef92e221c2eedbc728231bb762f9b12c33d7001197.json  query-51622ba3109fabd83b9c9e302885bb2b6b70c568c80738804ba3d27d4e0b7c64.json  query-e0b4b32a215b9c8dd52065846d0f0991bcf4fc0449d24a8f38c5ecefc75fbfe3.json
migrations/: 20231211120735_create_todos.down.sql  20231211120735_create_todos.up.sql
src/: db.rs  domain.rs  layouts.rs  lib.rs  main.rs  pages.rs  server.rs
src/pages/: blog.rs  home.rs
src/views/: control.rs  home.rs  list_footer.rs  mod.rs  todo_entry.rs
