[package]
name = "dioxus-todo-app"
version = "0.1.0"
authors = ["sh1nduu <sh1nduu@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-fullstack = { version = "0.4", features = ["router"] }

dioxus = { version = "0.4" }
serde = { version = "1.0.159", features = ["derive"] }

dioxus-router = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = []

ssr = ["dioxus-fullstack/axum"]

web = ["dioxus-router/web", "dioxus-fullstack/web"]

