[package]
name = "dioxus-todo-app"
version = "0.1.0"
authors = ["sh1nduu <sh1nduu@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "todolib"
path = "src/lib.rs"

[dependencies]

dioxus-fullstack = { version = "0.4.3", features = ["router"] }
dioxus = { version = "0.4.3" }
serde = { version = "1.0.159", features = ["derive"] }
dioxus-router = { version = "0.4.3" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

anyhow = "1.0.75"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros"] }
#getrandom = { version = "0.2.11", features = ["js"] }

[features]
default = []

ssr = ["dioxus-fullstack/axum"]

web = ["dioxus-router/web", "dioxus-fullstack/web"]
